# drasil

./: Cargo.toml  README.md
admin/: package.json  pnpm-lock.yaml  tailwind.config.js
admin/src/: main.tsx
admin/src/components/: navbar.tsx  theme-provider.tsx
drasil-dns/: Cargo.toml  README.md
drasil-dns/src/: buffer.rs  common.rs  error.rs  header.rs  lib.rs  packet.rs  question.rs  record.rs  types.rs
drasil-dns/src/packet/: builder.rs
drasil-dns/src/record/: edns.rs
gui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
gui/src/: index.css
gui/src/routes/: __root.tsx  about.tsx  index.tsx
src/: admin.rs  cache.rs  config.rs  header.rs  main.rs  question.rs  record.rs  server.rs  utils.rs
src/cache/: redis.rs
src/packet/: builder.rs
src/protocol/: header.rs
src/record/: edns.rs
src/server/: tcp.rs  udp.rs
src/types/: dnssec.rs
